# bigarchiver

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: Dockerfile.template  PLATFORMS  PLATFORMS.example  build-internal.sh  build.sh  install-internal.sh  install-to-remote.sh
src/: arg_opts.rs  buffered_reader.rs  comp_decomp_2.rs  enc_dec.rs  file_set.rs  finalizable.rs  fixed_size_writer.rs  free_space.rs  hasher.rs  joiner.rs  lib.rs  multi_files_reader.rs  patterns.rs  splitter.rs  stats.rs
tests/: backup_and_restore.rs  external_test.sh
tests/common/: mod.rs
