[package]
name = "bigarchiver"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
libc = "0.2.151"
liblzma = { version = "0.2.1", features = ["parallel", "static"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
ring = "0.17.7"
time = { version = "0.3.31", features = ["local-offset"] }
twox-hash = "1.6.3"

[dev-dependencies]
test-case = "*"
